syntax = "proto3";

option csharp_namespace = "PingpongApi";
package Pingpong;

service PingpongService{
  rpc Ping (PingRequest) returns (PongReply);
}

message PingRequest {
  string message = 1;
}

message PongReply{
  string message = 1;
}